<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_timers">

    <fragment
        android:id="@+id/navigation_timers"
        android:name="com.rewardtimer.app.ui.fragments.TimersFragment"
        android:label="@string/title_timers"
        tools:layout="@layout/fragment_timers" />

    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.rewardtimer.app.ui.fragments.RewardsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/fragment_rewards" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.rewardtimer.app.ui.fragments.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.rewardtimer.app.ui.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
